--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "dependencies": {
     "@apollo/client": "^3.13.3",
     "@tailwindcss/vite": "^4.0.12",
-    "graphql": "^16.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/client-preset": "^4.7.0",
     "@graphql-codegen/typescript": "^4.1.5",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -29,7 +31,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "typescript": "~5.7.2",
+    "graphql": "^16.10.0",
+    "typescript": "~5.7.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
   }
